# adyen-test

./: .gitignore  README.md  prepare_data.ipynb  prompts.yaml  pyproject.toml  task.ipynb
pydantic_models/: review_analysis.py
