[tool.poetry]
name = "adyen-test"
version = "0.1.0"
description = ""
authors = ["Fernando Rodriguez <fernando.rodriguez@ailylabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.6,<3.11"
datasets = "^3.0.1"
langchain = "^0.3.3"
langchain-huggingface = "^0.1.0"
huggingface-hub = "^0.25.2"
transformers = "^4.45.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
